--- a/Xcom2/1123865738/Config/XComKatanaMod.ini
+++ b/Xcom2/1123865738/Config/XComKatanaMod.ini
@@ -61,52 +61,52 @@ NINJATO_BEAM_ICON = img:///KatanaPkg.Textures.IconNinjatoBM
 +NINJATO_BEAM_ABILITIES = SilentTakedown
 
 KATANA_CONVENTIONAL_BASEDAMAGE_LW2=(Damage=3, Spread=1, PlusOne=0, Crit=4, Pierce=3, Shred=0, Tag="", DamageType="Melee")
-KATANA_CONVENTIONAL_BASEDAMAGE=(Damage=4, Spread=1, PlusOne=0, Crit=2, Pierce=0, Shred=0, Tag="", DamageType="Melee")
+KATANA_CONVENTIONAL_BASEDAMAGE=(Damage=5, Spread=1, PlusOne=0, Crit=2, Pierce=1, Shred=0, Tag="", DamageType="Melee")
 KATANA_CONVENTIONAL_AIM=20
-KATANA_CONVENTIONAL_CRITCHANCE=10
+KATANA_CONVENTIONAL_CRITCHANCE=15
 KATANA_CONVENTIONAL_ICLIPSIZE=0
 KATANA_CONVENTIONAL_ISOUNDRANGE=8
 KATANA_CONVENTIONAL_IENVIRONMENTDAMAGE=5
-KATANA_CONVENTIONAL_UPGRADESLOTS = 1
+KATANA_CONVENTIONAL_UPGRADESLOTS = 0
 KATANA_CONVENTIONAL_STUNCHANCE = 0 
 KATANA_CONVENTIONAL_PANICCHANCE = 0
 KATANA_CONVENTIONAL_BURN = false
-KATANA_CONVENTIONAL_DISORIENT = false
+KATANA_CONVENTIONAL_DISORIENT = true
 KATANA_CONVENTIONAL_ARCHETYPE = KatanaPkg.Archetypes.WP_Sword_CV
 KATANA_CONVENTIONAL_ICON = img:///KatanaPkg.Textures.KatanaIconNEW
-+KATANA_CONVENTIONAL_ABILITIES = KatanaSpeedBonus
++KATANA_CONVENTIONAL_ABILITIES = MusashiLightningStrikeT1
 
 KATANA_BEAM_BASEDAMAGE_LW2=(Damage=10, Spread=2, PlusOne=0, Crit=5, Pierce=4, Shred=1, Tag="", DamageType="Melee")
-KATANA_BEAM_BASEDAMAGE=(Damage=6, Spread=1, PlusOne=0, Crit=4, Pierce=1, Shred=1, Tag="", DamageType="Melee")
+KATANA_BEAM_BASEDAMAGE=(Damage=8, Spread=1, PlusOne=0, Crit=4, Pierce=2, Shred=1, Tag="", DamageType="Melee")
 KATANA_BEAM_AIM=20
-KATANA_BEAM_CRITCHANCE=15
+KATANA_BEAM_CRITCHANCE=20
 KATANA_BEAM_ICLIPSIZE=0
 KATANA_BEAM_ISOUNDRANGE=8
 KATANA_BEAM_IENVIRONMENTDAMAGE=5
-KATANA_BEAM_UPGRADESLOTS = 2
-KATANA_BEAM_STUNCHANCE = 0 
+KATANA_BEAM_UPGRADESLOTS = 0
+KATANA_BEAM_STUNCHANCE = 50 
 KATANA_BEAM_PANICCHANCE = 0
 KATANA_BEAM_BURN = false
-KATANA_BEAM_DISORIENT = false
+KATANA_BEAM_DISORIENT = true
 KATANA_BEAM_ARCHETYPE = KatanaPkg.Archetypes.WP_Katana_MG
 KATANA_BEAM_ICON = img:///KatanaPkg.Textures.KatanaEnergy_red
-+KATANA_BEAM_ABILITIES = KatanaSpeedBonus
++KATANA_BEAM_ABILITIES = MusashiLightningStrikeT2
 
 KATANA_PLASMA_BASEDAMAGE_LW2=(Damage=14, Spread=2, PlusOne=0, Crit=6, Pierce=5, Shred=2, Tag="", DamageType="Melee")
-KATANA_PLASMA_BASEDAMAGE=(Damage=8, Spread=1, PlusOne=0, Crit=5, Pierce=4, Shred=2, Tag="", DamageType="Melee")
+KATANA_PLASMA_BASEDAMAGE=(Damage=11, Spread=1, PlusOne=0, Crit=5, Pierce=3, Shred=2, Tag="", DamageType="Melee")
 KATANA_PLASMA_AIM=20
-KATANA_PLASMA_CRITCHANCE=20
+KATANA_PLASMA_CRITCHANCE=25
 KATANA_PLASMA_ICLIPSIZE=0
 KATANA_PLASMA_ISOUNDRANGE=8
 KATANA_PLASMA_IENVIRONMENTDAMAGE=10
-KATANA_PLASMA_UPGRADESLOTS = 3
-KATANA_PLASMA_STUNCHANCE = 0 
+KATANA_PLASMA_UPGRADESLOTS = 0
+KATANA_PLASMA_STUNCHANCE = 50 
 KATANA_PLASMA_PANICCHANCE = 0
-KATANA_PLASMA_BURN = false
-KATANA_PLASMA_DISORIENT = false
+KATANA_PLASMA_BURN = true
+KATANA_PLASMA_DISORIENT = true
 KATANA_PLASMA_ARCHETYPE = KatanaPkg.Archetypes.WP_Katana_BM
 KATANA_PLASMA_ICON = img:///KatanaPkg.Textures.KatanaEnergy_BM
-+KATANA_PLASMA_ABILITIES = KatanaSpeedBonus
++WAKIZASHI_BEAM_ABILITIES = MusashiLightningStrikeT3
 
 ; Values below are only effective if bWakizashiIsCosmetic=false
 WAKIZASHI_CONVENTIONAL_BASEDAMAGE_LW2=(Damage=2, Spread=1, PlusOne=0, Crit=2, Pierce=0, Shred=0, Tag="", DamageType="Melee")
@@ -218,6 +218,6 @@ WAKIZASHI_SPEED_BONUS = 2
 KATANA_SPEED_BONUS = 0
 NINJATO_SPEED_BONUS = 1
 
-LIGHTNING_SLASH_COOLDOWN_T1 = 5
-LIGHTNING_SLASH_COOLDOWN_T2 = 4
-LIGHTNING_SLASH_COOLDOWN_T3 = 3
+LIGHTNING_SLASH_COOLDOWN_T1 = 3
+LIGHTNING_SLASH_COOLDOWN_T2 = 2
+LIGHTNING_SLASH_COOLDOWN_T3 = 1
