--- a/Xcom2/1124840874/Config/XComGameData_SoldierSkills.ini
+++ b/Xcom2/1124840874/Config/XComGameData_SoldierSkills.ini
@@ -13,3 +13,5 @@
 +ValidHeadshotAbilities=BulletSwarmRS			;Gunner & Rifleman Perk counts as a single shot for 1 action point
 +ValidHeadshotAbilities=Deadeye					;This might make Deadeye more useful versus Lost Brutes, Deadeye requires 2 actions to use anyway
 +ValidHeadshotAbilities=Sting					;Sting is amazing with the mod that removes the charges, Reapers 4 life <3
++ValidHeadshotAbilities=Slash_RS
++ValidHeadshotAbilities=SwordSlice
