--- a/Xcom2/1129753213/Config/XComArmorConfig.ini
+++ b/Xcom2/1129753213/Config/XComArmorConfig.ini
@@ -28,11 +28,11 @@ hp=1, shield=0, armor=0, mob=0, dodge=0, defense=0, will=0, \\
 aim=0, hack=0, crit=0, pierce=0, psi=0, flankcrit=0, flankaim=0, sneak=0.0f)
 
 +VestList=(ItemName=PlatedVest, AbilityName=PlatedVest_Chrm, \\
-hp=2, shield=20, armor=1, mob=0, dodge=50, defense=50, will=0, \\
+hp=2, shield=5, armor=1, mob=0, dodge=25, defense=25, will=0, \\
 aim=0, hack=0, crit=0, pierce=0, psi=0, flankcrit=0, flankaim=0, sneak=0.0f)
 
 +VestList=(ItemName=HazmatVest, AbilityName=HazmatVest_Chrm, \\
-hp=3, shield=0, armor=2, mob=6, dodge=75, defense=75, will=0, \\
+hp=3, shield=10, armor=2, mob=0, dodge=50, defense=50, will=0, \\
 aim=0, hack=0, crit=0, pierce=0, psi=0, flankcrit=0, flankaim=0, sneak=0.0f, \\
 abilities[0]=Chrm_FireImmunity, abilities[1]=Chrm_FrostImmunity, abilities[2]=Chrm_AcidImmunity, abilities[3]=Chrm_PoisonImmunity)
 
@@ -75,24 +75,24 @@ utilityslot=true, heavyweapon=false, abilities[0]=VaultAbility, abilities[1]=Vau
 
 ;;;LIGHT
 +ArmorList=(ItemName=LightPlatedArmor, AbilityName=LightPlatedArmor_Chrm, \\
-hp=4, shield=0, armor=0, mob=1, dodge=20, defense=0, will=0, \\
+hp=4, shield=5, armor=1, mob=4, dodge=25, defense=25, will=0, \\
 aim=0, hack=0, crit=0, pierce=0, psi=0, flankcrit=0, flankaim=0, sneak=0.0f, \\
 utilityslot=true, heavyweapon=false, abilities[0]=Grapple)
 
 +ArmorList=(ItemName=LightPoweredArmor, AbilityName=LightPoweredArmor_Chrm, \\
-hp=8, shield=0, armor=0, mob=4, dodge=25, defense=25, will=0, \\
+hp=8, shield=10, armor=3, mob=6, dodge=50, defense=50, will=0, \\
 aim=0, hack=0, crit=0, pierce=0, psi=0, flankcrit=0, flankaim=0, sneak=0.0f, \\
 utilityslot=true, heavyweapon=false, abilities[0]=GrapplePowered, abilities[1]=WallPhasing)
 
 +ArmorList=(ItemName=LightAlienArmor, AbilityName=LightAlienArmor_Chrm, \\
-hp=5, shield=0, armor=0, mob=1, dodge=35, defense=0, will=0, \\
+hp=5, shield=10, armor=0, mob=1, dodge=35, defense=0, will=0, \\
 aim=0, hack=0, crit=0, pierce=0, psi=0, flankcrit=0, flankaim=0, sneak=0.0f, \\
-utilityslot=false, heavyweapon=false, abilities[0]=Grapple, abilities[1]=FreezingLash, abilities[2]=SerpentPanic)
+utilityslot=true, heavyweapon=false, abilities[0]=Grapple, abilities[1]=FreezingLash, abilities[2]=SerpentPanic)
 
 +ArmorList=(ItemName=LightAlienArmorMk2, AbilityName=LightAlienArmorMk2_Chrm, \\
-hp=7, shield=0, armor=0, mob=2, dodge=40, defense=0, will=0, \\
+hp=7, shield=20, armor=0, mob=2, dodge=40, defense=0, will=0, \\
 aim=0, hack=0, crit=0, pierce=0, psi=0, flankcrit=0, flankaim=0, sneak=0.0f, \\
-utilityslot=false, heavyweapon=false, abilities[0]=GrapplePowered, abilities[1]=FreezingLash, abilities[2]=SerpentPanic)
+utilityslot=true, heavyweapon=false, abilities[0]=GrapplePowered, abilities[1]=FreezingLash, abilities[2]=SerpentPanic)
 
 ;;;HEAVY
 +ArmorList=(ItemName=HeavyPlatedArmor, AbilityName=HeavyPlatedArmor_Chrm, \\
