--- a/Xcom2/1124840874/Config/XComClassData.ini
+++ b/Xcom2/1124840874/Config/XComClassData.ini
@@ -5,6 +5,8 @@
 ;************************************************************************************************************
 [XComGame.X2SoldierClassTemplateManager]
 +ExtraCrossClassAbilities=(AbilityName="OverdriveRS")
++ExtraCrossClassAbilities=(AbilityName="ExtraLayersRS")
++ExtraCrossClassAbilities=(AbilityName="ExtraLayersRS")
 
 ;************************************************************************************************************
 ; DISABLE MY CLASSES HERE
@@ -13,16 +15,16 @@
 ;************************************************************************************************************
 [XComGame.X2SoldierClass_DefaultClasses]
 ;+SoldierClasses="AssassinRS" ;Assassin
-;+SoldierClasses="DemolitionsRS" ;Demolitions
-;+SoldierClasses="GunnerRS" ;Gunner
++SoldierClasses="DemolitionsRS" ;Demolitions
++SoldierClasses="GunnerRS" ;Gunner
 +SoldierClasses="MageRS" ;Mage (Psi-Class)
 ;+SoldierClasses="MarksmanRS" ;Marksman
 ;+SoldierClasses="MedicRS" ;Medic
 +SoldierClasses="RaiderRS" ;Raider
-;+SoldierClasses="RiflemanRS" ;Rifleman
++SoldierClasses="RiflemanRS" ;Rifleman
 +SoldierClasses="ScoutRS" ;Scout
-;+SoldierClasses="SurvivalistRS" ;Survivalist
-;+SoldierClasses="SWATRS" ;SWAT
++SoldierClasses="SurvivalistRS" ;Survivalist
++SoldierClasses="SWATRS" ;SWAT
 +SoldierClasses="TechnicianRS" ;Technician
 
 ;************************************************************************************************************
