--- a/Xcom2/1124840874/Config/XComClassData.ini
+++ b/Xcom2/1124840874/Config/XComClassData.ini
@@ -14,12 +14,12 @@
 ; eg. ;+SoldierClasses="AssassinRS" disables the Assassin Class.
 ;************************************************************************************************************
 [XComGame.X2SoldierClass_DefaultClasses]
-;+SoldierClasses="AssassinRS" ;Assassin
++SoldierClasses="AssassinRS" ;Assassin
 +SoldierClasses="DemolitionsRS" ;Demolitions
 +SoldierClasses="GunnerRS" ;Gunner
 +SoldierClasses="MageRS" ;Mage (Psi-Class)
-;+SoldierClasses="MarksmanRS" ;Marksman
-;+SoldierClasses="MedicRS" ;Medic
++SoldierClasses="MarksmanRS" ;Marksman
++SoldierClasses="MedicRS" ;Medic
 +SoldierClasses="RaiderRS" ;Raider
 +SoldierClasses="RiflemanRS" ;Rifleman
 +SoldierClasses="ScoutRS" ;Scout
