--- a/Xcom2/1129770962/Config/XComImTheCommanderHere.ini
+++ b/Xcom2/1129770962/Config/XComImTheCommanderHere.ini
@@ -3,13 +3,13 @@
 xShowChangelogBTN = false
 
 ;set to true to enable respeccing without Training Center being built
-xAlwaysShowRespecBTN = true
+xAlwaysShowRespecBTN = false
 
 [ImTheCommanderHere.ImTheCommanderHere_UI]
 
 ;change the cost for respeccing an ability here
 ;values 0 and below will get set to 1
-iRespecAPCost = 1;
+iRespecAPCost = 2;
 
 ;If set to true will not charge you the extra cost for switching none powerful ability (like Phantom) to powerful ability (like serial)
 ;but also won't refund AP if you change Serial to Phantom, you will only be charged extra on unlocked slots, switching a locked slot
