--- a/Xcom2/1129753213/Config/XComArmorConfig.ini
+++ b/Xcom2/1129753213/Config/XComArmorConfig.ini
@@ -34,7 +34,7 @@ aim=0, hack=0, crit=0, pierce=0, psi=0, flankcrit=0, flankaim=0, sneak=0.0f)
 +VestList=(ItemName=HazmatVest, AbilityName=HazmatVest_Chrm, \\
 hp=3, shield=10, armor=2, mob=0, dodge=50, defense=50, will=0, \\
 aim=0, hack=0, crit=0, pierce=0, psi=0, flankcrit=0, flankaim=0, sneak=0.0f, \\
-abilities[0]=Chrm_FireImmunity, abilities[1]=Chrm_FrostImmunity, abilities[2]=Chrm_AcidImmunity, abilities[3]=Chrm_PoisonImmunity)
+abilities[0]=Chrm_FireImmunity, abilities[1]=Chrm_FrostImmunity, abilities[2]=Chrm_AcidImmunity, abilities[3]=Chrm_PoisonImmunity, abilities[4]=Chrm_MentalImmunity)
 
 +VestList=(ItemName=StasisVest, AbilityName=StasisVest_Chrm, \\
 hp=2, shield=0, armor=0, mob=0, dodge=0, defense=0, will=0, \\
