加入探险队

--- a/Xcom2/1124840874/Config/XComClassData.ini
+++ b/Xcom2/1124840874/Config/XComClassData.ini
@@ -285,7 +285,6 @@ NumInDeck=2
 ; Initiate
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="Soulfire", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 								(AbilityType=(AbilityName="MarkTargetRS")), \\
-								(AbilityType=(AbilityName="SkirmisherGrapple", ApplyToWeaponSlot=eInvSlot_Unknown)), \\
 								(AbilityType=(AbilityName="BulletSwarmRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
 
 							 ), \\
@@ -501,8 +500,7 @@ NumInDeck=2
 +BaseAbilityPointsPerPromotion=5
 
 ; squaddie
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="SkirmisherGrapple", ApplyToWeaponSlot=eInvSlot_Unknown)), \\
-								(AbilityType=(AbilityName="BladefighterRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="BladefighterRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 								(AbilityType=(AbilityName="SwordSlice", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 								(AbilityType=(AbilityName="Slash_RS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							),\\
@@ -644,8 +642,7 @@ NumInDeck=2
 +BaseAbilityPointsPerPromotion=5
 
 ; squaddie
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="SkirmisherGrapple", ApplyToWeaponSlot=eInvSlot_Unknown)), \\
-								(AbilityType=(AbilityName="ConcealandCarryRS")), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="ConcealandCarryRS")), \\
 								(AbilityType=(AbilityName="ShadowShotRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 								(AbilityType=(AbilityName="PistolStandardShot", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							),\\
@@ -871,8 +868,7 @@ NumInDeck=2
 +BaseAbilityPointsPerPromotion=5
 
 ; squaddie
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="SkirmisherGrapple", ApplyToWeaponSlot=eInvSlot_Unknown)), \\
-								(AbilityType=(AbilityName="AidProtocol", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="AidProtocol", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 								(AbilityType=(AbilityName="IntrusionProtocol", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 								(AbilityType=(AbilityName="HaywireProtocol",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							),\\
