--- a/Xcom2/1124840874/Config/XComClassData.ini
+++ b/Xcom2/1124840874/Config/XComClassData.ini
@@ -5,8 +5,6 @@
 ;************************************************************************************************************
 [XComGame.X2SoldierClassTemplateManager]
 +ExtraCrossClassAbilities=(AbilityName="OverdriveRS")
-+ExtraCrossClassAbilities=(AbilityName="ExtraLayersRS")
-+ExtraCrossClassAbilities=(AbilityName="ExtraLayersRS")
 
 ;************************************************************************************************************
 ; DISABLE MY CLASSES HERE
@@ -36,19 +34,19 @@
 
 [Ranger X2SoldierClassTemplate]
 NumInForcedDeck=1
-NumInDeck=2
+NumInDeck=4
 
 [Sharpshooter X2SoldierClassTemplate]
 NumInForcedDeck=1
-NumInDeck=2
+NumInDeck=4
 
 [Grenadier X2SoldierClassTemplate]
 NumInForcedDeck=1
-NumInDeck=2
+NumInDeck=4
 
 [Specialist X2SoldierClassTemplate]
 NumInForcedDeck=1
-NumInDeck=2
+NumInDeck=4
 
 ;************************************************************************************************************
 ;Assassin
@@ -274,7 +272,6 @@ NumInDeck=2
 +KillAssistsPerKill=4
 +SquaddieLoadout=SquaddieMageRS
 +AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="shotgun")
-+AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="rifle")
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="psiamp")
 +AllowedArmors="soldier"
 +bAllowAWCAbilities=1
@@ -285,8 +282,8 @@ NumInDeck=2
 ; Initiate
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="Soulfire", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 								(AbilityType=(AbilityName="MarkTargetRS")), \\
-								(AbilityType=(AbilityName="BulletSwarmRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
-
+								(AbilityType=(AbilityName="BulletSwarmRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+								(AbilityType=(AbilityName="SkirmisherGrapple", ApplyToWeaponSlot=eInvSlot_Unknown)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_PsiOffense,StatAmount=100), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1), (StatType=eStat_Will,StatAmount=10)) \\
 			)
@@ -486,7 +483,6 @@ NumInDeck=2
 +KillAssistsPerKill=4
 +SquaddieLoadout=SquaddieRaiderRS
 +AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="shotgun")
-+AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="rifle")
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="sword")
 +AllowedArmors="soldier"
 +bAllowAWCAbilities=1
@@ -502,7 +498,8 @@ NumInDeck=2
 ; squaddie
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="BladefighterRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 								(AbilityType=(AbilityName="SwordSlice", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
-								(AbilityType=(AbilityName="Slash_RS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
+								(AbilityType=(AbilityName="Slash_RS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
+								(AbilityType=(AbilityName="SkirmisherGrapple", ApplyToWeaponSlot=eInvSlot_Unknown)) \\
 							),\\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1), (StatType=eStat_Will,StatAmount=10)) \\
 			)
@@ -628,9 +625,7 @@ NumInDeck=2
 +KillAssistsPerKill=3
 +SquaddieLoadout=SquaddieScoutRS
 +AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="shotgun")
-+AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="rifle")
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="pistol")
-;+AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="sidearm")
 +AllowedArmors="soldier"
 +bAllowAWCAbilities=1
 +ExcludedAbilities="Phantom"				; AWC Disabled, Has Conceal & Carry
@@ -644,7 +639,8 @@ NumInDeck=2
 ; squaddie
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="ConcealandCarryRS")), \\
 								(AbilityType=(AbilityName="ShadowShotRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
-								(AbilityType=(AbilityName="PistolStandardShot", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
+								(AbilityType=(AbilityName="PistolStandardShot", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
+								(AbilityType=(AbilityName="SkirmisherGrapple", ApplyToWeaponSlot=eInvSlot_Unknown)) \\
 							),\\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=45), (StatType=eStat_CombatSims,StatAmount=1), (StatType=eStat_Will,StatAmount=10)) \\
 			)
@@ -857,7 +853,6 @@ NumInDeck=2
 +KillAssistsPerKill=3
 +SquaddieLoadout="SquaddieTechnicianRS"
 +AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="shotgun")
-+AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="rifle")
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="gremlin")
 +AllowedArmors="soldier"
 +bAllowAWCAbilities=1
@@ -870,7 +865,8 @@ NumInDeck=2
 ; squaddie
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="AidProtocol", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 								(AbilityType=(AbilityName="IntrusionProtocol", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
-								(AbilityType=(AbilityName="HaywireProtocol",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
+								(AbilityType=(AbilityName="HaywireProtocol",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
+								(AbilityType=(AbilityName="SkirmisherGrapple", ApplyToWeaponSlot=eInvSlot_Unknown)) \\
 							),\\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=75), (StatType=eStat_CombatSims,StatAmount=1), (StatType=eStat_Will,StatAmount=10)) \\
 			)
