更新局部文件

--- a/Xcom2/1124840874/Config/XComClassData.ini
+++ b/Xcom2/1124840874/Config/XComClassData.ini
@@ -337,10 +337,9 @@ NumInDeck=4
 +NumInDeck=3
 +KillAssistsPerKill=5
 +SquaddieLoadout=SquaddieMarksmanRS
++AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="shotgun")
 +AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="sniper_rifle")
-+AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="vektor_rifle")
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="pistol")
-;+AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="sidearm")
 +AllowedArmors="soldier"
 +bAllowAWCAbilities=1
 +ExcludedAbilities="Squadsight"						; AWC Disabled
@@ -356,7 +355,7 @@ NumInDeck=4
 
 ; squaddie
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="SkirmisherGrapple", ApplyToWeaponSlot=eInvSlot_Unknown)), \\
-								(AbilityType=(AbilityName="Squadsight")), \\
+								(AbilityType=(AbilityName="LongReachRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
 								(AbilityType=(AbilityName="SnapShotRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="PistolStandardShot", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							),\\
@@ -364,7 +363,7 @@ NumInDeck=4
 			)
 ; corporal 
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="MarkTargetRS")), \\
-								(AbilityType=(AbilityName="LongWatch", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
+								(AbilityType=(AbilityName="Implacable")) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
@@ -381,20 +380,20 @@ NumInDeck=4
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; captain
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="ClutchShotRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
-								(AbilityType=(AbilityName="SkirmisherInterrupt")) \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="BulletSwarmRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+								(AbilityType=(AbilityName="WeaponSpecialistRS",	ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=1), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; major
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="WeaponExpertRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="GatlingFireRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="SeekandDestroyRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; colonel
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="DeathFromAbove", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-								(AbilityType=(AbilityName="KillZone", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
+								(AbilityType=(AbilityName="Faceoff", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
@@ -664,13 +663,13 @@ NumInDeck=4
 			)
 ; captain
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="HideRS")), \\
-								(AbilityType=(AbilityName="ClutchShotRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
+								(AbilityType=(AbilityName="WoundingShotRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=1), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; major
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="SurpriseShotRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
-								(AbilityType=(AbilityName="WoundingShotRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
+								(AbilityType=(AbilityName="Untouchable")) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
@@ -877,19 +876,19 @@ NumInDeck=4
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; sergeant 
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="ChainShot", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="BulletSwarmRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="BurnProtocolRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; lieutenant
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="WeaponSpecialistRS",	ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="WarningShotRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="ShockProtocolRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; captain
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="WarningShotRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="WeaponSpecialistRS",	ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="ActionProtocolRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=1), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)) \\
