--- a/Xcom2/1123788033/Config/XComGameCore.ini
+++ b/Xcom2/1123788033/Config/XComGameCore.ini
@@ -6,7 +6,7 @@
 -NumPointsAwarded=1
 -TacticalEvent=true
 -Chance=20
-+NumPointsAwarded=2
++NumPointsAwarded=5
 +TacticalEvent=true
 +Chance=100
 
@@ -14,7 +14,7 @@
 -NumPointsAwarded=1
 -TacticalEvent=true
 -Chance=45
-+NumPointsAwarded=2
++NumPointsAwarded=5
 +TacticalEvent=true
 +Chance=100
 
@@ -22,7 +22,7 @@
 -NumPointsAwarded=1
 -TacticalEvent=true
 -Chance=40
-+NumPointsAwarded=2
++NumPointsAwarded=5
 +TacticalEvent=true
 +Chance=100
 
@@ -30,14 +30,14 @@
 -NumPointsAwarded=1
 -TacticalEvent=true
 -Chance=40
-+NumPointsAwarded=2
++NumPointsAwarded=5
 +TacticalEvent=true
 +Chance=100
 
 ;[ChosenKilled X2AbilityPointTemplate]
-;NumPointsAwarded=5
-;TacticalEvent=false
-;Chance=100
+NumPointsAwarded=10
+TacticalEvent=false
+Chance=100
 
 ;[ChosenDefeated X2AbilityPointTemplate]
 ;-NumPointsAwarded=10
