--- a/Xcom2/1124840874/Config/XComClassData.ini
+++ b/Xcom2/1124840874/Config/XComClassData.ini
@@ -12,17 +12,17 @@
 ; eg. ;+SoldierClasses="AssassinRS" disables the Assassin Class.
 ;************************************************************************************************************
 [XComGame.X2SoldierClass_DefaultClasses]
-+SoldierClasses="AssassinRS" ;Assassin
-+SoldierClasses="DemolitionsRS" ;Demolitions
-+SoldierClasses="GunnerRS" ;Gunner
-+SoldierClasses="MageRS" ;Mage (Psi-Class)
+;+SoldierClasses="AssassinRS" ;Assassin
+;+SoldierClasses="DemolitionsRS" ;Demolitions
+;+SoldierClasses="GunnerRS" ;Gunner
+;+SoldierClasses="MageRS" ;Mage (Psi-Class)
 +SoldierClasses="MarksmanRS" ;Marksman
 +SoldierClasses="MedicRS" ;Medic
 +SoldierClasses="RaiderRS" ;Raider
 +SoldierClasses="RiflemanRS" ;Rifleman
 +SoldierClasses="ScoutRS" ;Scout
 +SoldierClasses="SurvivalistRS" ;Survivalist
-+SoldierClasses="SWATRS" ;SWAT
+;+SoldierClasses="SWATRS" ;SWAT
 +SoldierClasses="TechnicianRS" ;Technician
 
 ;************************************************************************************************************
@@ -337,7 +337,6 @@ NumInDeck=4
 +NumInDeck=3
 +KillAssistsPerKill=5
 +SquaddieLoadout=SquaddieMarksmanRS
-+AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="shotgun")
 +AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="sniper_rifle")
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="pistol")
 +AllowedArmors="soldier"
@@ -355,7 +354,7 @@ NumInDeck=4
 
 ; squaddie
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="SkirmisherGrapple", ApplyToWeaponSlot=eInvSlot_Unknown)), \\
-								(AbilityType=(AbilityName="LongReachRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
+								(AbilityType=(AbilityName="LongReachRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="SnapShotRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="PistolStandardShot", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							),\\
@@ -368,8 +367,8 @@ NumInDeck=4
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; sergeant 
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="Quickdraw")), \\
-								(AbilityType=(AbilityName="SteadyHands")) \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="WeaponExpertRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+								(AbilityType=(AbilityName="DeathFromAbove", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
@@ -380,19 +379,19 @@ NumInDeck=4
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; captain
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="BulletSwarmRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-								(AbilityType=(AbilityName="WeaponSpecialistRS",	ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="SkirmisherStrike")), \\
+								(AbilityType=(AbilityName="WeaponSpecialistRS",	ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=1), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; major
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="GatlingFireRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="ChainShot", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="SeekandDestroyRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; colonel
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="DeathFromAbove", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="InTheZone", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="Faceoff", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)) \\
@@ -876,7 +875,7 @@ NumInDeck=4
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)) \\
 			)
 ; sergeant 
-+SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="BulletSwarmRS", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="Deadeye", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="BurnProtocolRS", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)) \\
